# summarize_doc

./: LICENSE  README.md  app.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
summarize_doc/app/: setupview.py  sidebar.py
summarize_doc/src/pdf_summarize/: pdf_summarize.py
summarize_doc/src/summarize/: helper_function.py
summarize_doc/src/txt_summarize/: txt_summarize.py
