[tool.poetry]
name = "summarize-doc"
version = "0.1.0"
description = ""
authors = ["HaarisIqubal <mdhaarisiqubal@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9.21"
streamlit = "^1.41.1"
pypdf2 = "^3.0.1"
spacy = "3.7.5"
langchain = "^0.3.14"
nltk = "^3.9.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
